--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 <title>Le Template Du Game, Man</title>
-
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="jquery-1.11.3.js"></script>
 <script src="gamedev.js"></script>
@@ -12,7 +11,7 @@
 
 <div class="titleContent">
 
-<h1 class="splashTitle">The<br>Game Template</h1>
+<h1 class="splashTitle">The<br>Dark S1D3</h1>
 
 <a id="start" class="button" href="explore.html">Play</a>
 
