--- a/explore.html
+++ b/explore.html
@@ -35,13 +35,13 @@
 
 <div class="hudBase">
 	<div class="hudObj"> 
-		<h3>Objective</h3>
-		<p>
-		You've been called in to deal with "a situation". No further information is available yet, standby.
+		<h3>Prologue</h3>
+		<p>You were exploring the country park looking for pokemon. Then you got lost 
+        in a eerie, dark and creepy forest. You see someone you have known who wants to destroy you. His men are surrounding you, he walks away with the most creepiest smile. You have nowehere to go. You have to take out your gun and...
+
+        KILL THEM ALL
 		</p>
-		<p>
-		In the meantime, walk around to find objects that might tell you what happened here!
-		</p>
+		
 	</div>
 
 	<div class="hudInv"> 
