--- a/explore.html
+++ b/explore.html
@@ -36,8 +36,8 @@
 <div class="hudBase">
 	<div class="hudObj"> 
 		<h3>Prologue</h3>
-		<p>
-        You were exploring the country park looking for pokemon. Then you got lost in a eerie, dark and creepy forest. You see someone you have known who wants to destroy you. His men are surrounding you, he walks away with the most creepiest smile. You have nowehere to go. You have to take out your gun and...
+		<p>You were exploring the country park looking for pokemon. Then you got lost 
+        in a eerie, dark and creepy forest. You see someone you have known who wants to destroy you. His men are surrounding you, he walks away with the most creepiest smile. You have nowehere to go. You have to take out your gun and...
 
         KILL THEM ALL
 		</p>
@@ -46,7 +46,7 @@
 
 	<div class="hudInv"> 
 		<h3 id="invTitle">Inventory</h3>
-		<div class="invSlot1" id="invTool"> Tool </div>
+		<div class="invSlot1" id="invTool"> Secret Gun </div>
 	</div>
 </div>
 
