--- a/explore.html
+++ b/explore.html
@@ -36,8 +36,7 @@
 <div class="hudBase">
 	<div class="hudObj"> 
 		<h3>Prologue</h3>
-		<p>You were exploring the country park looking for pokemon. Then you got lost 
-        in a eerie, dark and creepy forest. You see someone you know who wants to destroy you. His men are surrounding you, he walks away with the most creepiest smile. You have nowehere to go. You have to take out your gun and...
+		<p>You just broke up with the love of your life. He had gone crazy. You had gone for your morning walk and you got jost in a dark forrest. You see him,  His men are surrounding you, he walks away with the most creepiest smile. You have nowehere to go. You have to take out your gun and...
 
         KILL THEM ALL
 		</p>
@@ -50,7 +49,6 @@
 	</div>
 </div>
 
-</body>
 
 <div id = "reaper">
 </div>
@@ -58,5 +56,9 @@
 <div id = "kenji">
 </div>
 
-<div id = "snoopy dogg">
+<div id = "snoopydogg">
 </div>
+
+</body>
+
+
